bplm/sfdx-src/main/default/objects/Business_Process_Step__c/Business_Process_Step__c.object-meta.xml
<CustomObject>
    <label>Business Process Step</label>
    <nameField>
        <label>Business Process Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Process Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>