bplm/sfdx-src/main/default/objects/Business_Process_Step__c/fields/Buffer_Days__c.field-meta.xml
<CustomField>
    <fullName>Buffer_Days__c</fullName>
    <label>Buffer Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>