bplm/sfdx-src/main/default/objects/Business_Process_Step__c/fields/Business_Days_To_Complete__c.field-meta.xml
<CustomField>
    <fullName>Business_Days_To_Complete__c</fullName>
    <description>Days required to complete step</description>
    <inlineHelpText>Days required to complete step</inlineHelpText>
    <label>Business Days To Complete</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>