bplm/sfdx-src/main/default/objects/Business_Process_Step__c/fields/Business_Process_Step_Owner__c.field-meta.xml
<CustomField>
    <fullName>Business_Process_Step_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner of business step</description>
    <inlineHelpText>Owner of business step</inlineHelpText>
    <label>Business Process Step Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Business Process Steps</relationshipLabel>
    <relationshipName>Business_Process_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>