bplm/sfdx-src/main/default/objects/Business_Process_Step__c/fields/Depend_Upon__c.field-meta.xml
<CustomField>
    <fullName>Depend_Upon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Depend Upon</label>
    <referenceTo>Business_Process_Step__c</referenceTo>
    <relationshipLabel>Business Process Steps</relationshipLabel>
    <relationshipName>Business_Process_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>