bplm/sfdx-src/main/default/objects/Business_Process_Step__c/fields/is_Active__c.field-meta.xml
<CustomField>
    <fullName>is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is this step active?</description>
    <inlineHelpText>is this step active?</inlineHelpText>
    <label>is Active</label>
    <type>Checkbox</type>
</CustomField>