bplm/sfdx-src/main/default/objects/Business_Process_Step__c/fields/Step_Summary__c.field-meta.xml
<CustomField>
    <fullName>Step_Summary__c</fullName>
    <label>Step Summary</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>