bplm/sfdx-src/main/default/objects/Business_Process_Step__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Process_Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>